Fix crash on selecting gameData object

--- a/src/i18n/translations/en/common.json
+++ b/src/i18n/translations/en/common.json
@@ -1,10 +1,12 @@
 {
   "load-file": {
+    "load": "Load",
     "loading": "Loading",
     "instructions": "Load a save using the controls on the upper left.",
     "save-location": "Save files can be found at {{path}}."
   },
   "save-file": {
+    "save": "Save",
     "saving": "Saving"
   },
   "close-dialog": "Close"
