Theme loading dialog

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -4,7 +4,8 @@
     "duplicants": "Duplicants"
   },
   "save-file": {
-    "load": "Load"
+    "load": "Load",
+    "loading": "Loading"
   },
   "overview": {
     "no-save": {
