--- a/src/translations/en/oni.json
+++ b/src/translations/en/oni.json
@@ -256,7 +256,7 @@
         "DESC": "This Duplicant will always bring back an artifact from space expeditions."
       }
     },
-    "attributes": {
+    "ATTRIBUTES": {
       "Construction": {
         "NAME": "Construction",
         "DESC": "Determines a Duplicant's building speed."
