Move copy dialog into AbstractCopyButton

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -56,6 +56,11 @@
       "cancel_titlecase": "Cancel"
     }
   },
+  "data": {
+    "verbs": {
+      "copy_titlecase": "Copy"
+    }
+  },
   "save-file": {
     "verbs": {
       "load_titlecase": "Load"
