Export duplicant data

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -58,7 +58,8 @@
   },
   "data": {
     "verbs": {
-      "copy_titlecase": "Copy"
+      "copy_titlecase": "Copy",
+      "export_titlecase": "Export"
     }
   },
   "save-file": {
