Translations for import checksum warning

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -52,14 +52,24 @@
     "noun_titlecase": "Cycle Time"
   },
   "dialog": {
+    "queries": {
+      "continue": "Are you sure you want to continue?"
+    },
     "verbs": {
       "cancel_titlecase": "Cancel"
     }
   },
   "data": {
+    "conditions": {
+      "modified_titlecase": "Data Modified"
+    },
+    "prompts": {
+      "modified-description": "The data in this file has been modified since it was exported.\nImported data is not validated, and importing invalid data can corrupt your save"
+    },
     "verbs": {
       "copy_titlecase": "Copy",
-      "export_titlecase": "Export"
+      "export_titlecase": "Export",
+      "import_titlecase": "Import"
     }
   },
   "save-file": {
