Correct label for experience

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -34,6 +34,7 @@
   },
   "duplicant_skills": {
     "noun_titlecase": "Skills",
+    "experience_titlecase": "Experience",
     "mastery_titlecase": "Mastery"
   },
   "duplicant_appearance": {
