Load button on appbar

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -96,7 +96,8 @@
   },
   "save-file": {
     "verbs": {
-      "load_titlecase": "Load"
+      "load_titlecase": "Load",
+      "save_titlecase": "Save"
     },
     "conditions": {
       "loading": "Loading",
